--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SilhoutteMale.png" translatesAutoresizingMaskIntoConstraints="NO" id="U3k-ex-baV">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SilhoutteFemale.png" translatesAutoresizingMaskIntoConstraints="NO" id="U3k-ex-baV">
                                 <rect key="frame" x="230" y="50" width="140" height="370"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="370" id="avw-uY-2OZ"/>
@@ -305,7 +305,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="SilhoutteMale.png" width="133" height="372"/>
+        <image name="SilhoutteFemale.png" width="161" height="331"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="9Os-uu-hNJ"/>
